// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleImage tests renders correctly 1`] = `
<div>
  <div>
    <img
      alt="The Statue of Liberty's torch heads to new museum"
      class="picture"
      height="150"
      src="https://cdn.cnn.com/cnnnext/dam/assets/181122102925-statue-of-liberty-crown-super-169.jpg"
      width="200"
    />
  </div>
</div>
`;

exports[`ArticleImage tests renders correctly when url is https://cdn.cnn.com/cnnnext/dam/assets/181121093937-travel-deals-rei-adventures-greek-islands-super-169.jpg 1`] = `
<div>
  <div>
    <img
      alt="Travel deals for Black Friday and Cyber Monday"
      class="picture"
      height="150"
      src="https://cdn.cnn.com/cnnnext/dam/assets/181121093937-travel-deals-rei-adventures-greek-islands-super-169.jpg"
      width="200"
    />
  </div>
</div>
`;
